# haskell-book

./: .dockerignore  .gitignore  Dockerfile  Makefile  QUICK_START.md  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  script.js  styles.css
backend/: README.md  haskell-book-server.cabal
backend/src/: Main.hs
backend/src/Api/: Handlers.hs  Types.hs
backend/src/Data/: Chapter.hs  User.hs
frontend/: script.js
haskell-book-server/: CHANGELOG.md  haskell-book-server.cabal
haskell-book-server/app/: Main.hs
