cabal-version:   3.0
name:            haskell-book-server
version:         0.1.0.0
license:         NONE
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable haskell-book-server
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
